# EmbeddedCpp

./: CMakeLists.txt  README.md
include/: assert.hpp
src/: main.cpp
tests/: test_main.cpp
